fix email confirmation text alignment

--- a/client/src/styles/EmailConfirmation.css
+++ b/client/src/styles/EmailConfirmation.css
@@ -15,7 +15,7 @@
 }
 
 .confirmation-header {
-  text-align: center;
+  text-align: left;
   margin-bottom: 2rem;
 }
 
